add popup toastify

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,2 +1,7 @@
-@use 'reset';
-@use 'vars';
+@use "reset";
+@use "vars";
+
+.Toastify__toast {
+  border-radius: 255px 25px 225px 25px/25px 225px 25px 255px;
+  text-decoration: none;
+}
