--- a/src/components/Home/style.scss
+++ b/src/components/Home/style.scss
@@ -22,6 +22,12 @@
     font-size: 2rem;
   }
 
+  &__start {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
   &__playButtonClick {
     margin-top: 5rem;
     font-size: 2rem;
@@ -42,5 +48,7 @@
     margin-top: 1rem;
     font-size: 1.2rem;
     font-style: italic;
+    color: #fff;
+    text-shadow: 1px 1px 1px gray;
   }
 }
