--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -136,3 +136,14 @@ table {
 iframe {
   display: none;
 }
+
+* {
+  -moz-user-select: none; /* Firefox */
+  -webkit-user-select: none; /* Chrome, Safari, Opéra depuis la version 15 */
+  -ms-user-select: none; /* Internet explorer depuis la version 10 et Edge */
+  user-select: none; /* Propriété standard */
+}
+
+input {
+  border: none;
+}
