--- a/src/components/Selection/style.scss
+++ b/src/components/Selection/style.scss
@@ -3,7 +3,6 @@
   align-items: center;
   justify-content: center;
   font-size: 1.8rem;
-  //   margin: 30px;
   padding: 0.5rem 1rem;
   overflow: auto;
   background-color: #d4d4d5ba;
@@ -18,7 +17,7 @@
   justify-content: center;
   text-align: center;
   padding: 1rem;
-  //   height: auto;
+  cursor: pointer;
 }
 
 .toggler_open {
