--- a/src/components/ButtonNext/style.scss
+++ b/src/components/ButtonNext/style.scss
@@ -1,3 +1,12 @@
-.buttonNext_close {
-  display: none;
+.buttonNext {
+  border-radius: 50%;
+  overflow: hidden;
+
+  &_container {
+    width: 4rem;
+  }
+
+  &_close {
+    display: none;
+  }
 }
