--- a/src/components/Home/style.scss
+++ b/src/components/Home/style.scss
@@ -42,6 +42,8 @@
     height: 100px;
     border: none;
     cursor: pointer;
+    border-radius: 50%;
+    overflow: hidden;
 
     &:disabled {
       background-color: rgba(178, 152, 120, 0.5);
