--- a/src/components/End/style.scss
+++ b/src/components/End/style.scss
@@ -5,6 +5,7 @@
   overflow: auto;
   background-position: center;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   ::-webkit-scrollbar {
@@ -12,12 +13,28 @@
   }
 }
 
+.replay {
+  cursor: pointer;
+  font-size: 1rem;
+  color: #fff;
+  background-color: #b29878;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  bottom: calc(5vh + 0.5rem);
+  right: calc(5vw + 0.5rem);
+  height: 4rem;
+  width: 4rem;
+  border-radius: 50%;
+}
+
 .resolution {
   background-color: rgba(216, 224, 226, 0.797);
   color: black;
   padding: 0 5rem 0 5rem;
-  width: 90%;
-  height: 90%;
+  width: 90vw;
+  height: 90vh;
   overflow: auto;
   font-size: 1.8rem;
   text-align: center;
