--- a/src/components/Alias/style.scss
+++ b/src/components/Alias/style.scss
@@ -6,11 +6,19 @@
   }
 
   &-content {
+    text-shadow: 0px 0px 2px rgb(114 114 114);
+    color: #fff;
+
+    &__connexion,
+    &__inscription {
+      color: #fff;
+      cursor: pointer;
+    }
+
     &__inscription:hover,
     &__connexion:hover,
     &__decoButton:hover {
       color: #b29878;
-      cursor: pointer;
     }
   }
 }
