--- a/src/components/Home/style.scss
+++ b/src/components/Home/style.scss
@@ -7,6 +7,7 @@
 }
 
 .content-container {
+  text-shadow: 0px 0px 2px rgb(114 114 114);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -14,6 +15,7 @@
   height: 100vh;
 
   &__title {
+    color: #fff;
     font-size: 3.5rem;
   }
 
@@ -21,6 +23,10 @@
     font-style: italic;
     margin-bottom: 5rem;
     font-size: 2rem;
+
+    & p {
+      color: #fff;
+    }
   }
 
   &__start {
@@ -58,5 +64,30 @@
     font-style: italic;
     color: #fff;
     text-shadow: 1px 1px 1px gray;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .content-container {
+    width: 80%;
+    margin: auto;
+
+    &__title {
+      text-align: center;
+      font-size: 2.5rem;
+    }
+
+    &__synopsis p {
+      font-size: 1.2rem;
+    }
+
+    &__playButtonClick {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 1.5rem;
+      width: 70px;
+      height: 70px;
+    }
   }
 }
