--- a/src/components/Registration/style.scss
+++ b/src/components/Registration/style.scss
@@ -4,6 +4,8 @@
   height: 100vh;
   overflow: auto;
   background-position: center;
+  display: flex;
+  align-items: center;
 
   &-form {
     h1 {
