--- a/src/components/Menu/style.scss
+++ b/src/components/Menu/style.scss
@@ -15,4 +15,9 @@
       color: #b29878;
     }
   }
+
+  &__title_open {
+    color: #b29878;
+    text-shadow: 0px 0px 2px rgb(114 114 114);
+  }
 }
