--- a/src/components/End/style.scss
+++ b/src/components/End/style.scss
@@ -1,7 +1,7 @@
 .end {
   background-image: url(../../img/photoplage.jpg);
   background-size: cover;
-  height: 100vh;
+  height: 100svh;
   overflow: auto;
   background-position: center;
   display: flex;
