--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,3 +5,7 @@
   border-radius: 255px 25px 225px 25px/25px 225px 25px 255px;
   text-decoration: none;
 }
+
+body {
+  height: 100svh!important;
+}
