--- a/src/components/ButtonNext/style.scss
+++ b/src/components/ButtonNext/style.scss
@@ -9,3 +9,13 @@
     display: none;
   }
 }
+
+@media screen and (max-width: 450px) {
+  .buttonNext {
+    height: fit-content;
+    &_container {
+      height: 6rem;
+      margin-bottom: 5%;
+    }
+  }
+}
