--- a/src/components/Selection/style.scss
+++ b/src/components/Selection/style.scss
@@ -1,13 +1,23 @@
 .selection {
   display: flex;
-  align-items: center;
-  justify-content: center;
   font-size: 1.8rem;
   padding: 0.5rem 1rem;
   overflow: auto;
   background-color: #d4d4d5ba;
   height: 160px;
   width: 75%;
+
+  &_open {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.8rem;
+    padding: 0.5rem 1rem;
+    overflow: auto;
+    background-color: #d4d4d5ba;
+    height: 160px;
+    width: 75%;
+  }
 }
 
 .toggler {
@@ -22,4 +32,14 @@
 
 .toggler_open {
   display: none;
+}
+
+@media screen and (max-width: 450px) {
+  .selection,
+  .selection_open {
+    width: 90%;
+    height: 100%;
+    margin: 5%;
+    font-size: 1.2rem;
+  }
 }
