--- a/src/components/Tag/style.scss
+++ b/src/components/Tag/style.scss
@@ -12,3 +12,13 @@
   border: solid 1px rgba(0, 0, 0, 0.71);
   margin-left: 4vw;
 }
+
+@media screen and (max-width: 450px) {
+  .tag {
+    bottom: 49%;
+
+    & h2 {
+      font-size: 1.2rem;
+    }
+  }
+}
