--- a/src/components/Menu/style.scss
+++ b/src/components/Menu/style.scss
@@ -21,3 +21,9 @@
     text-shadow: 0px 0px 2px rgb(114 114 114);
   }
 }
+
+@media screen and (max-width: 450px) {
+  .menuButton {
+    width: 6rem;
+  }
+}
