--- a/src/components/ButtonNext/style.scss
+++ b/src/components/ButtonNext/style.scss
@@ -13,9 +13,14 @@
 @media screen and (max-width: 1000px) {
   .buttonNext {
     height: fit-content;
+
     &_container {
       height: 6rem;
       margin-bottom: 5%;
+    }
+
+    &Mobile_close {
+      display: none;
     }
   }
 }
