--- a/src/components/Selection/style.scss
+++ b/src/components/Selection/style.scss
@@ -6,17 +6,16 @@
   background-color: #d4d4d5ba;
   height: 160px;
   width: 75%;
+}
 
+.select {
   &_open {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 1.8rem;
-    padding: 0.5rem 1rem;
+    padding: 0 0.5rem;
     overflow: auto;
-    background-color: #d4d4d5ba;
-    height: 160px;
-    width: 75%;
+    width: 100%;
   }
 }
 
@@ -35,11 +34,22 @@
 }
 
 @media screen and (max-width: 1000px) {
-  .selection,
-  .selection_open {
+  .selection {
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    overflow: auto;
+    height: 90%;
     width: 90%;
-    height: 100%;
-    margin: 5%;
+  }
+  .select_open {
+    width: 90%;
+    height: fit-content;
     font-size: 1.2rem;
+    padding: 0;
+  }
+
+  .select_close {
+    display: none;
   }
 }
