--- a/src/components/Game/style.scss
+++ b/src/components/Game/style.scss
@@ -1,3 +1,14 @@
+.game_onLoad {
+  background-image: url(../../img/photoplage.jpg);
+  background-size: cover;
+  height: 100svh;
+  overflow: auto;
+  display: flex;
+  align-items: center;
+  background-position: center;
+  background-position-x: 55.7%;
+}
+
 .picturesBack {
   background-size: 100%;
   width: 100%;
