--- a/src/components/HeadBand/style.scss
+++ b/src/components/HeadBand/style.scss
@@ -25,12 +25,13 @@
     bottom: 0;
     height: 50%;
     flex-direction: column;
+    padding: 1rem;
 
     &__text {
-      width: 90%;
-      margin: 5%;
+      width: 100%;
+      margin-bottom: 1rem;
       padding: 5%;
-      height: 100%;
+      height: 95%;
       font-size: 1.2rem;
     }
   }
