--- a/src/components/Selection/style.scss
+++ b/src/components/Selection/style.scss
@@ -39,9 +39,18 @@
     justify-content: space-evenly;
     align-items: center;
     overflow: auto;
-    height: 90%;
-    width: 90%;
+    // height: 85%;
+    // width: 90%;
+    width: 100%;
+    height: 100%;
+    font-size: 1.2rem;
+
+    &_close {
+      justify-content: flex-start;
+      margin-bottom: 5%;
+    }
   }
+
   .select_open {
     width: 90%;
     height: fit-content;
